[gd_scene load_steps=5 format=3 uid="uid://c57orfsgl2g74"]

[ext_resource type="Script" uid="uid://b4x7pfuoklt7m" path="res://scenes/game/pause_menu.gd" id="1_aj248"]
[ext_resource type="Theme" uid="uid://cgkvcmta8o53p" path="res://assets/themes/settings.tres" id="2_k8vbq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61cmk"]
bg_color = Color(0.22, 0.22, 0.22, 0.313726)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8vbq"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.588235)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aj248")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61cmk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PauseLabel" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PauseLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Game Paused"

[node name="Settings" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("2_k8vbq")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/Settings"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8vbq")

[node name="VBoxContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/Settings/PanelContainer"]
layout_mode = 2
columns = 2

[node name="MapScaleLabel" type="Label" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Map Scale: "

[node name="MapScaleSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 3.0
value = 2.0
rounded = true
tick_count = 3
ticks_on_borders = true

[node name="ToolbarScaleLabel" type="Label" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Toolbar Scale: "

[node name="ToolbarScaleSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 3.0
value = 2.0
rounded = true
tick_count = 3
ticks_on_borders = true

[node name="JournalScaleLabel" type="Label" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Journal Scale: "

[node name="JournalScaleSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 3.0
value = 2.0
rounded = true
tick_count = 3
ticks_on_borders = true

[node name="GridToggleLabel" type="Label" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle Grid: "

[node name="GridToggleCheck" type="CheckButton" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_pressed = true

[node name="WritingSpeedLabel" type="Label" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Writing Speed:"

[node name="WritingSpeedSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = 10.0
step = 10.0
value = 40.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="ExitToTitle" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/ExitToTitle"]
layout_mode = 2
theme = ExtResource("2_k8vbq")
theme_override_font_sizes/font_size = 48
text = "Exit To Title"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer/MapScaleSlider" to="." method="_on_scale_changed" binds= [0]]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer/ToolbarScaleSlider" to="." method="_on_scale_changed" binds= [1]]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer/JournalScaleSlider" to="." method="_on_scale_changed" binds= [2]]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer/GridToggleCheck" to="." method="_on_grid_toggled"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/Settings/PanelContainer/VBoxContainer/WritingSpeedSlider" to="." method="_on_writing_speed_schanged"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitToTitle/Button" to="." method="_on_exit_to_title"]
